ajout alt aux lien réseaux sociaux footer et correction contrast

--- a/style.css
+++ b/style.css
@@ -799,13 +799,13 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #fc7232;
+    background-color: #d1622f;
 }
 
 
 
 .btn-atomic-tangerine {
-    background: #fc7232;
+    background: #d1622f;
     color: #FFFFFF!important;
 }
 
